--- a/client/src/App.css
+++ b/client/src/App.css
@@ -248,9 +248,9 @@ header {
   height: 3vw;
   font-size: larger;
   border-radius: 15px;
-  border: solid rgb(155, 155, 155);
+  border: solid 1px rgb(155, 155, 155);
   outline: none;
-  padding: 1vh 1vw;
+  padding: 15px;
   color: rgb(90, 90, 90);
 }
 
